--- a/courses.html
+++ b/courses.html
@@ -42,6 +42,7 @@ for term in terms {
 									<ul class="actions">
                                         <li><a href="#term1" class="button scrolly">fall2022</a></li>
                                         <li><a href="#term2" class="button scrolly">winter2023</a></li>
+                                        <li><a href="#term3" class="button scrolly">summer2023</a></li>
                                     </ul>
                                     <section>
                                         <h3>September - December 2022 | Year 1 Term 1</h3>
@@ -132,6 +133,33 @@ for term in terms {
                                                     <tr>
                                                         <td colspan="2" style="text-align: right;">Term Average: </td>
                                                         <td>91.2</td>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
+                                    </section>
+                                    <section id="term3">
+                                        <h3>May - August 2023 | Year 1 Term 3 (Co-op)</h3>
+                                        <div class="table-wrapper">
+                                            <table class="alt">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Course</th>
+                                                        <th>Description</th>
+                                                        <th>Grade</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>PSYCH 101: Introductory Psychology <i>*online</i></td>
+                                                        <td>Understanding of the basic concepts and techniques of modern psychology as a behavioural science.</td>
+                                                        <td>TBD</td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
+                                                        <td colspan="2" style="text-align: right;">Term Average: </td>
+                                                        <td>TBD</td>
                                                     </tr>
                                                 </tfoot>
                                             </table>
