--- a/courses.html
+++ b/courses.html
@@ -4,8 +4,8 @@
 		<title>Courses</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -15,7 +15,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="elements.html"  class="active">Courses</a></li>
+						<li><a href="courses.html"  class="active">Courses</a></li>
 					</ul>
 				</nav>
 			</header>
