--- a/courses.html
+++ b/courses.html
@@ -43,6 +43,7 @@ for term in terms {
                                         <li><a href="#term1" class="button scrolly">fall2022</a></li>
                                         <li><a href="#term2" class="button scrolly">winter2023</a></li>
                                         <li><a href="#term3" class="button scrolly">summer2023</a></li>
+                                        <li><a href="#term4" class="button scrolly">fall2023</a></li>
                                     </ul>
                                     <section>
                                         <h3>September - December 2022 | Year 1 Term 1</h3>
@@ -160,6 +161,53 @@ for term in terms {
                                                     <tr>
                                                         <td colspan="2" style="text-align: right;">Term Average: </td>
                                                         <td>97</td>
+                                                    </tr>
+                                                </tfoot>
+                                            </table>
+                                        </div>
+                                    </section>
+                                    <section id="term4">
+                                        <h3>January - April 2023 | Year 2 Term 1</h3>
+                                        <div class="table-wrapper">
+                                            <table class="alt">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Course</th>
+                                                        <th>Description</th>
+                                                        <th>Grade</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>MATH 235: Linear Algebra 2 for Honours Mathematics</td>
+                                                        <td>Orthogonal and unitary matrices and transformations. Orthogonal projections, Gram-Schmidt procedure, best approximations, least-squares. Inner products, angles and orthogonality, orthogonal diagonalization, singular value decomposition, applications.</td>
+                                                        <td>97</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>MATH 237: Calculus 3 </td>
+                                                        <td>Calculus of functions of several variables. Limits, continuity, differentiability, the chain rule. The gradient vector and the directional derivative. Taylor's formula. Optimization problems. Mappings and the Jacobian. Multiple integrals in various co-ordinate systems.</td>
+                                                        <td>91</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>STAT 231: Statistics</td>
+                                                        <td>Numerical and graphical techniques for summarizing data and checking the fit of a statistical model will be discussed. The method of maximum likelihood will be used to obtain point and interval estimates for the parameters of interest as well as testing hypotheses. The interpretation of confidence intervals and p-values will be emphasized. The Chi-squared and t distributions will be introduced and used to construct confidence intervals and tests of hypotheses including likelihood ratio tests. Contingency tables and Gaussian response models including the two sample Gaussian and simple linear regression will be used as examples.</td>
+                                                        <td>92</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>CS 245: Logic and Computation</td>
+                                                        <td>Introduction to object-oriented programming and to tools and techniques for software development. Designing, coding, debugging, testing, and documenting medium-sized programs: reading specifications and designing software to implement them; selecting appropriate data structures and control structures; writing reusable code; reusing existing code; basic performance issues; debuggers; test suites.</td>
+                                                        <td>86</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>CS 246: Object-Oriented Programming</td>
+                                                        <td>Examine and challenge some influential ideas in philosophy and consider their importance to our lives. Questions might include: Does science describe the world as it really is? Is the mind just the brain? What can we know? Should we be moral? Do we have free will?</td>
+                                                        <td>93</td>
+                                                    </tr>
+                                                </tbody>
+                                                <tfoot>
+                                                    <tr>
+                                                        <td colspan="2" style="text-align: right;">Term Average: </td>
+                                                        <td>91.8</td>
                                                     </tr>
                                                 </tfoot>
                                             </table>
